# realtime512b

./: .gitignore  README.md  extract_event_frames.py  pyproject.toml
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/components/EpochBlocks/: EpochBlockDetailView.tsx  EpochBlocksView.tsx
dashboard/src/components/Epochs/: EpochDetailView.tsx  EpochsView.tsx
dashboard/src/components/Layout/: AppLayout.tsx
dashboard/src/components/Overview/: OverviewView.tsx
dashboard/src/components/Segments/: SegmentDetailView.tsx  SegmentsView.tsx
dashboard/src/services/: api.ts
dashboard/src/types/: index.ts
figpack-realtime512b-ui/: package-lock.json  package.json  vite.config.ts
figpack-realtime512b-ui/src/: index.tsx
realtime512b/: __init__.py  cli.py  figpack_realtime512b.js
realtime512b/figpack_realtime512b/: ClusterSeparationView.py  MEAFiringRatesAndAmplitudes.py  MEAMovie.py  MEASpikeFramesMovie.py  ReceptiveFieldsView.py  TemplatesView.py  __init__.py  figpack_realtime512b_extension.py
realtime512b/helpers/: __init__.py  bandpass_filter.py  epoch_block_spike_sorting.py  epoch_spike_sorting.py  file_info.py  generate_preview.py  receptive_fields.py  spike_sorting.py  unit_matching.py
realtime512b/init/: __init__.py  run_init.py
realtime512b/serve/: __init__.py  api_handlers.py  run_serve.py
realtime512b/start/: __init__.py  build_utils.py  config_utils.py  epoch_block_processor.py  epoch_processor.py  file_processors.py  run_start.py
(+8 files in other folders)
